<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="@color/bg_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/develop_company"
            android:textColor="@color/black70"
            android:textSize="@dimen/text_x_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/developer_address"
            android:textColor="@color/black70"
            android:textSize="@dimen/text_x_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/developer_call"
            android:textColor="@color/black70"
            android:textSize="@dimen/text_x_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/developer_nick_name"
            android:textColor="@color/black70"
            android:textSize="@dimen/text_x_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/developer_phone"
            android:textColor="@color/black70"
            android:textSize="@dimen/text_x_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/developer_site_f"
            android:textColor="@color/black70"
            android:textSize="@dimen/text_x_small" />

    </LinearLayout>

</layout>