<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/sl_layout"
        android:background="@color/bg_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- 个人中心头部 -->
                <RelativeLayout
                    android:background="@color/colorPrimary"
                    android:id="@+id/user_layout"
                    android:layout_width="match_parent"
                    android:layout_height="160dp">

                    <ImageView
                        android:id="@+id/iv_head"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_head_circle"
                        android:padding="2dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/img_default_head" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_head"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/app_name"
                        android:textColor="@android:color/white"
                        android:textSize="16dp" />

                </RelativeLayout>
                <View
                    android:layout_marginTop="10dp"
                    style="@style/Setting_Item_Divider"/>
                <TextView
                    android:drawablePadding="5dp"
                    android:drawableLeft="@mipmap/ic_company"
                    android:id="@+id/tv_factory"
                    style="@style/Setting_Item"
                    android:text="@string/factory_info" />
                <View
                    style="@style/Setting_Item_Divider"/>

                <TextView
                    android:drawablePadding="5dp"
                    android:drawableLeft="@mipmap/ic_setting"
                    android:id="@+id/tv_system"
                    style="@style/Setting_Item"
                    android:text="@string/system_setting" />
                <View
                    style="@style/Setting_Item_Divider"/>
                <View
                    android:layout_marginTop="10dp"
                    style="@style/Setting_Item_Divider"/>
                <TextView
                    android:drawablePadding="5dp"
                    android:drawableLeft="@mipmap/ic_service"
                    android:id="@+id/tv_service"
                    style="@style/Setting_Item"
                    android:text="@string/service_info" />
                <View
                    style="@style/Setting_Item_Divider"/>
                <TextView
                    android:drawablePadding="5dp"
                    android:drawableLeft="@mipmap/ic_about"
                    android:id="@+id/tv_about"
                    style="@style/Setting_Item"
                    android:text="@string/about" />
                <View
                    style="@style/Setting_Item_Divider"/>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</layout>