<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:background="@color/bg_color"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/iv_logo"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black80"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/black80"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <View
            android:layout_marginTop="10dp"
            style="@style/Setting_Item_Divider"/>
        <TextView
            android:id="@+id/tv_call"
            style="@style/Setting_Item"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/icon_about_tel"
            android:text="@string/developer_call" />
        <View
            style="@style/Setting_Item_Divider"/>
        <TextView
            android:drawableLeft="@mipmap/icon_check_update"
            android:id="@+id/check_update"
            style="@style/Setting_Item"
            android:drawablePadding="5dp"
            android:text="@string/check_update" />
        <View
            style="@style/Setting_Item_Divider"/>

    </LinearLayout>
</layout>