<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <android.support.constraint.ConstraintLayout
        android:background="@color/bg_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_device_name"
            style="@style/CardStyle_Light"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@+id/tv_choose"
            app:layout_constraintHorizontal_bias="0.413"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_choose"
            android:layout_width="114dp"
            android:layout_height="41dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="16dp"
            style="@style/CardStyle_Dark"
            android:gravity="center"
            android:text="选择设备"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            style="@style/CardStyle_Light"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:layout_marginTop="76dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_choose"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_device_name"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <Button
            android:id="@+id/bt_call_quality"
            style="@style/CardStyle_Light"
            android:layout_width="146dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/call_quality"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/bt_call_tech" />

        <Button
            android:id="@+id/bt_call_tech"
            style="@style/CardStyle_Light"
            android:layout_width="146dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/call_tech"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <Button
            android:id="@+id/bt_call_logistics"
            style="@style/CardStyle_Light"
            android:layout_width="146dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/call_logistics"
            app:layout_constraintStart_toStartOf="@+id/bt_call_manager"
            app:layout_constraintTop_toBottomOf="@+id/bt_call_manager" />

        <Button
            android:id="@+id/bt_call_support"
            style="@style/CardStyle_Light"
            android:layout_width="146dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:text="@string/call_support"
            app:layout_constraintStart_toStartOf="@+id/bt_call_logistics"
            app:layout_constraintTop_toBottomOf="@+id/bt_call_logistics" />

        <Button
            android:id="@+id/bt_call_manager"
            style="@style/CardStyle_Light"
            android:layout_width="146dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/call_manager"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    </android.support.constraint.ConstraintLayout>

</layout>