<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="60dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/iv_logo"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_input_login"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_username" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:hint="@string/username_hint"
                android:singleLine="true"
                android:textColor="@color/black70"
                android:textColorHint="@color/black70"
                android:textSize="@dimen/text_xx_small" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/ll_username"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_input_login"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_password" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black70"
                android:textColorHint="@color/black70"
                android:textSize="@dimen/text_xx_small" />
        </LinearLayout>


        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/ll_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_button_login"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_company"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_x_normal" />

        </LinearLayout>

    </RelativeLayout>

</layout>